[package]
name = "visca-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-serial = "5.4"
tokio = { version = "1.42.0", features = [
    "net",
    "rt",
    "rt-multi-thread",
    "macros",
] }
log = "0.4.22"
env_logger = "0.11.5"
byteorder = "1.5.0"
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
